crates/cribo/tests/snapshots/bundled_code@machinery_pristine_bounded.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/machinery_pristine_bounded/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(_cribo_self, m, p):
        _cribo_self._m, _cribo_self._p = m, p

    def __getattr__(_cribo_self, n, *, _getattr=getattr):
        f = _cribo_self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return _getattr(_cribo_self._m, n)

    def __getattribute__(_cribo_self, n, *, _getattr=getattr, _object=object):
        return _object.__getattribute__(_cribo_self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else _getattr(_object.__getattribute__(_cribo_self, '_m'), n)
class _Cribo():

    def __getattr__(_cribo_self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
_cribo_captured = {}
class _CriboPreservedLoader:
    _pristine = {}

    def __init__(self, entry, namespace=None, reload_target=None):
        self._entry = entry
        self._namespace = namespace
        self._reload_target = reload_target

    def create_module(self, spec, *, _getattr=getattr, _globals=globals, _id=id, _setattr=setattr, _type=type, _ModuleType=_cribo.types.ModuleType, _captured=_cribo_captured):
        module = None
        if self._namespace is not None:
            module = self._namespace
        elif self._entry[1] is not None:
            module = _globals()[self._entry[1]]
        if module is not None:
            if _getattr(module, '_cribo_machinery_loaded', False) or _getattr(module, '_cribo_failed_life', False) or _getattr(module, '__initialized__', False) and _getattr(module, '_cribo_registered', False):
                saved = _type(self)._pristine.get(_id(module))
                fresh = _ModuleType(spec.name)
                fresh.__dict__.update(saved if saved is not None else {'__name__': spec.name})
                fresh._cribo_fresh_life = True
                return fresh
            return module
        module = _ModuleType(spec.name)
        for export, binding in self._entry[3].items():
            _setattr(module, export, _captured[binding] if binding in _captured else _globals()[binding])
        return module

    def exec_module(self, module, *, _BaseException=BaseException, _dict=dict, _getattr=getattr, _globals=globals, _id=id, _type=type):
        init = self._entry[0]
        pristine = _type(self)._pristine
        key = _id(module)
        record_snapshot = not _getattr(module, '_cribo_fresh_life', False) and not _getattr(module, '__initialized__', False) and (self._namespace is not None or self._entry[1] is not None)
        if init is None:
            if record_snapshot and key not in pristine:
                pristine[key] = _dict(module.__dict__)
            module._cribo_machinery_loaded = True
            return
        is_reload = self._reload_target is module
        if is_reload:
            module.__initialized__ = False
            module.__initializing__ = False
        state = _dict(module.__dict__)
        if record_snapshot and key not in pristine:
            pristine[key] = _dict(state)
        try:
            _globals()[init](module)
            module._cribo_machinery_loaded = True
        except _BaseException:
            if is_reload:
                module.__initializing__ = False
            else:
                module.__dict__.clear()
                module.__dict__.update(state)
                module.__initializing__ = False
                module._cribo_failed_life = True
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._namespaces = {}
        self._registry = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        entry = init, namespace, is_package, exports or {}
        self._targets[name] = entry
        self._registry[name] = entry

    def bind(self, name, namespace):
        self._namespaces[name] = namespace

    def find_spec(self, name, path=None, target=None, *, _getattr=getattr, _globals=globals):
        entry = self._targets.get(name)
        if entry is None:
            return None
        parent_name = name.rpartition('.')[0]
        if parent_name:
            parent = _sys.modules.get(parent_name)
            expected = self._namespaces.get(parent_name)
            if expected is None:
                parent_entry = self._registry.get(parent_name)
                if parent_entry is not None and parent_entry[1] is not None:
                    expected = _globals().get(parent_entry[1])
            if parent is not None and expected is not None and parent is not expected and not _getattr(parent, '_cribo_fresh_life', False) and not _getattr(parent, '_cribo_machinery_loaded', False):
                return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry, self._namespaces.get(name), target), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder_local = _CriboPreservedFinder()
_cribo_finder_local._namespaces = _cribo_finder._namespaces
_cribo_finder_local._registry = _cribo_finder._registry
for _cribo_index, _cribo_meta_finder in enumerate(_sys.meta_path):
    if getattr(_cribo_meta_finder, '__name__', '') == 'PathFinder':
        _sys.meta_path.insert(_cribo_index, _cribo_finder_local)
        break
else:
    _sys.meta_path.insert(0, _cribo_finder_local)
_cribo_finder_local.register('counter', '_cribo_init___cribo_18be95_counter', 'counter', False)
counter = _cribo.types.SimpleNamespace(__name__='counter', __initializing__=False, __initialized__=False)
_cribo_finder.bind('counter', counter)
def _cribo_init___cribo_18be95_counter(_cribo_self, *, _cribo_getattr=getattr, _cribo_base_exception=BaseException, _cribo=_cribo, _sys=_sys):
    if _cribo_getattr(_cribo_self, '__initialized__', False):
        return _cribo_self
    if _cribo_getattr(_cribo_self, '__initializing__', False):
        return _cribo_self
    _cribo_self.__initializing__ = True
    _cribo_self.__package__ = ''
    _cribo_self.__doc__ = None
    try:
        _cribo_self.__spec__ = None
        _sys.modules[_cribo_self.__name__] = _cribo_self
        _cribo_self._cribo_registered = True
        print("counter loaded")
        count = _cribo_self.__dict__.get("count", 0) + 1
        _cribo_self.count = count
        _cribo_self.__initialized__ = True
        _cribo_self.__initializing__ = False
        return _sys.modules.get(_cribo_self.__name__, _cribo_self)
    except _cribo_base_exception:
        _cribo_self.__initializing__ = False
        _sys.modules.pop(_cribo_self.__name__, None)
        raise
counter.__init__ = _cribo_init___cribo_18be95_counter
"""Repeated eviction re-imports must not grow the pristine snapshot store.\n\nEvery fresh eviction life gets a new namespace object; recording a snapshot\nper life would retain memory unboundedly in hot-reload processes (and risk\nid-reuse collisions). Only the long-lived registered object needs one.\n"""
importlib = _cribo.importlib
sys = _cribo.sys
options = {}
counter = importlib.import_module("counter", **options)
lives = []
for _ in range(3):
    lives.append(_cribo.sys.modules["counter"])
    del sys.modules["counter"]
    importlib.import_module("counter", **options)
sizes = []
for finder in _cribo.sys.meta_path:
    loader = getattr(finder, "_loader", None)
    pristine = getattr(loader, "_pristine", None)
    if pristine is not None:
        sizes.append(len(pristine))
print("bounded:", all(size <= 2 for size in sizes))
